@@ -5,6 +5,8 @@
 Version 0.67
  x Rewritten mirror() to use File::Fetch.
  x Rewritten unpack() to use Archive::Extract.
+ x Changed mirror() and unpack() into instance methods and use log_info()
+   instead of print inside them.
 
 Version 0.66
  x More comprehensive tests, remove unused code and some
